Configure fuzzy application strategy